--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.batuy.shoplist_sumin.presentation.ShopItemViewModel" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        app:errorInputName="@{viewModel.errorInputName}"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/til_count"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +30,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name"
             android:layout_width="match_parent"
+            android:text="@{viewModel.shopItem.name}"
             android:layout_height="wrap_content"
             android:hint="@string/name"
             android:inputType="textCapWords" />
@@ -34,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        app:errorInputCount="@{viewModel.errorInputCount}"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/save_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +54,7 @@
             android:id="@+id/et_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@{viewModel.shopItem.count}"
             android:hint="@string/count"
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -59,3 +69,4 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
